Added some Bayesian

--- a/code/shark_td_brm.Rmd
+++ b/code/shark_td_brm.Rmd
@@ -30,152 +30,76 @@ source("packages.R")
 ```{r echo=FALSE, message=FALSE}
 source(knitr::purl("../code/eda_shark_depth.Rmd", quiet=TRUE))
 source(knitr::purl("../code/eda_shark_temp.Rmd", quiet=TRUE))
+source("individ_daily_td.R")
 ```
 
-
-## To model temp vs depth, will need to do a few preliminary steps:
-
-1. Decide temporal scale - daily, weekly, monthly?
-2. Decide actual response - maximums, means, minimums? What about variability?
-3. Wrangle data according to the above and ensure transmitter_id is kept in as we'll need it as a random effect in any model
-
-## Let's start out with daily values - will need to calculate these separately (T vs P) and then combine together
-
-### Depth
-```{r}
-shark_1_d <- 
-  shark_tp_data %>% 
-  mutate(date = date(detection_timestamp)) %>% 
-  filter(!is.na(Depth)) %>% 
-  group_by(transmitter_id, date) %>% 
-  summarise(daily_max_depth = max(Depth),
-            daily_min_depth = min(Depth),
-            daily_mean_depth = mean(Depth)) %>% 
-  mutate(daily_min_depth = if_else(daily_min_depth <0, 0, daily_min_depth))
-shark_1_d
-```
-
-### Temp
-```{r}
-shark_1_t <- 
-  shark_tp_data %>% 
-  mutate(date = date(detection_timestamp)) %>% 
-  filter(!is.na(Temp)) %>% 
-  group_by(transmitter_id, date) %>% 
-  summarise(daily_max_temp = max(Temp),
-            daily_min_temp = min(Temp),
-            daily_mean_temp = mean(Temp))
-
-shark_1_t
-```
-
-## We also will need SST as a predictor for max depth 
-The only data set we have at a daily temporal scale is CRW (for the moment) so we'll use that for now
-Combine together
-```{r}
-shark_1_td <- 
-  full_join(shark_1_d, shark_1_t) %>% 
-  full_join(CRWdata) %>% 
-  rename(SST = temp)
-```
 
 ```{r}
 shark_1_td %>% 
-  ggplot() +
-  geom_line(aes(x = date, y = SST)) +
-  geom_line(aes(x = date, y = daily_max_depth)) +
-  facet_wrap( ~ transmitter_id)
-
+  filter(is.na(daily_max_depth))
 ```
 
 
+We used glmmTMB to explore some of the main effects, both fixed and random, and their interactions.
 
+Now will remodel in a Bayesian framework.
 
-
-
-# Had better check distributions so we know how to model
-## Depth distribution
-```{r}
-shark_1_td %>% 
-  ggplot() +
-  geom_histogram(aes(x = daily_max_depth))
-
-shark_1_td %>% 
-  ggplot() +
-  geom_histogram(aes(x = daily_mean_depth))
-
-shark_1_td %>% 
-  ggplot() +
-  geom_histogram(aes(x = daily_max_depth))
-
-```
-
-## Temp histograms
-```{r}
-shark_1_td %>% 
-  ggplot() +
-  geom_histogram(aes(x = daily_max_temp))
-
-shark_1_td %>% 
-  ggplot() +
-  geom_histogram(aes(x = daily_mean_temp))
-
-shark_1_td %>% 
-  ggplot() +
-  geom_histogram(aes(x = daily_max_temp))
-```
-
-
-
-
-
+Model 5 and 5a were the most appropriate for our purposes (TBC) but take ages to run in brms, so will trial with simple model first (to get priors sorted etc)
 
 
 # Model fitting
 
 Model formula will be:
 ```{r}
-td.form <- bf(daily_max_depth ~ SST + (1|transmitter_id), family = "gaussian")
+td.form <- bf(daily_max_depth ~ SST + (SST|transmitter_id), family = "gaussian")
 ```
 
 We can see what priors we need to specify for such a model and what the default priors would be if we don't specify
 ```{r}
-get_prior(daily_max_depth ~ SST + (1|transmitter_id), family = "gaussian", data = shark_1_td)
+get_prior(daily_max_depth ~ SST + (SST|transmitter_id), data = shark_1_td, family = "gaussian")
 ```
+
+
 I would quite like to see what these priors look like:
 ```{r}
 standist::visualize("student_t(3, 49.1, 36.4)",
-                     "student_t(3, 0, 36.4)",
-                     "normal(0, 1)",
-                    "gamma(5,0.1)",
-                    "gamma(5,1)",
-                    "cauchy(0,5)")
+                    "student_t(3, 0, 36.4)"
+                    #"normal(0, 1)",
+                    #"gamma(5,0.1)",
+                    #"gamma(5,1)",
+                    #"cauchy(0,5)"
+                    )
 ```
 
 
 ```{r}
-priors <- prior(normal(35,5), class = 'Intercept') +
-    prior(normal(0, 10), class = 'b') +
-    prior(gamma(2,0.5), class = 'sigma') +
-    prior(normal(0,5), class = 'sd') 
+priors <- 
+  prior(normal(35,5), class = 'Intercept') +
+  prior(normal(0, 10), class = 'b')
+  #prior(gamma(2,0.5), class = 'sigma') +
+  #prior(normal(0,5), class = 'sd') 
+
+priors2 <- 
+  prior(student_t(3, 49.1, 36.4), class = 'Intercept') +
+  prior(normal(0, 10), class = 'b') +
+  prior(gamma(2,0.5), class = 'sigma') +
+  prior(normal(0,5), class = 'sd') 
+  
 ```
 
 
 
 # Prior only model
 
-```{r}
+```{r message=FALSE}
 prior_mod <- brm(td.form, 
                   data = shark_1_td,
-                  prior = priors,
+                  prior = priors2,
                   sample_prior = 'only',
                   iter = 5000,
                   warmup = 2500,
                   chains = 3,
-                  thin = 5,
-                  refresh = 0#,
-                  #backend = "cmdstanr"
-                 )
+                  thin = 5)
 ```
 
 ## Chain diagnostics
@@ -185,32 +109,55 @@ plot(prior_mod)
 
 
 ```{r}
-prior_mod %>% 
-conditional_effects() %>%
-    plot(points = TRUE)
-
+prior_mod %>% conditional_effects() %>%  plot(points = TRUE)
 ```
 
-```{r}
+## Fit model with data
+
+```{r message=FALSE, warning=FALSE}
 td_mod <- brm(td.form, 
-                  data = shark_1_td,
-                  prior = priors,
-                  sample_prior = 'yes',
-                  iter = 5000,
-                  warmup = 2500,
-                  chains = 3,
-                  thin = 5,
-                  refresh = 0,
-                  backend = "cmdstanr"
-                 )
+              data = shark_1_td,
+              prior = priors2,
+              sample_prior = 'yes',
+              iter = 5000,
+              warmup = 2500,
+              chains = 3,
+              cores = 3,
+              thin = 5,
+              refresh = 0,
+              backend = "cmdstanr")
+
+td_mod2 <- brm(td.form, 
+              data = shark_1_td,
+              prior = priors,
+              sample_prior = 'yes',
+              iter = 2000,
+              warmup = 1000,
+              chains = 3,
+              cores = 3,
+              thin = 5,
+              refresh = 0,
+              backend = "cmdstanr")
 ```
 
 
+## Chain diagnostics - main model
 ```{r}
-td_mod %>% 
-conditional_effects() %>%
-    plot(points = TRUE)
+plot(td_mod)
+```
+## Chain diagnostics - detail
+```{r}
+mcmc_plot(td_mod,  type='trace')
+mcmc_plot(td_mod,  type='acf_bar')
+mcmc_plot(td_mod,  type='rhat_hist')
+mcmc_plot(td_mod,  type='neff_hist')
+```
 
+
+
+
+```{r}
+td_mod %>% conditional_effects() %>%  plot(points = TRUE)
 ```
 
 
@@ -224,29 +171,33 @@ td_mod %>% get_variables()
 ```{r}
 td_mod %>% hypothesis("SST=25")
 td_mod %>% hypothesis("SST=30")
-td_mod %>% hypothesis("SST=30") %>% plot()
-
+td_mod2 %>% hypothesis("SST=+25") %>% plot()
 ```
 
-# Chain diagnostics
 
-## Autocorrelation
-```{r mcmc-acf}
-td_mod$fit %>%
-    stan_ac(pars = params)
+
+```{r}
+td_mod %>% ggpredict() 
+td_mod2 %>% ggpredict() 
 ```
+
+
+## Model exploration
+
+```{r}
+td_mod %>% ggemmeans(~ SST) %>% plot 
+```
+
+
+
+
 
 
 ```{r}
 
 
+
 ```
-
-
-
-
-
-
 
 
 
